# esp32c6

./: Cargo.toml  Embed.toml  README.md
src/: index.html  main.rs
