[package]
name = "esp32c6_example"
version = "0.3.0"
authors = ["David Lawrence <dlaw@dlaw.me>"]
edition = "2024"
license = "MIT"

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[dependencies]
esp-alloc = "0.7"
esp-backtrace = { version = "0.15", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13", default-features = false, features = ["esp32c6", "critical-section", "colors", "jtag-serial"] }
esp-wifi = { version = "0.13", features = ["builtin-scheduler", "esp-alloc", "esp32c6", "wifi", "smoltcp"] }
httparse = { version = "1.8", default-features = false }
smoltcp = { version = "0.12", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-udp", "socket-tcp", "socket-dhcpv4"] }
